update Main.storyboard and Icon

--- a/QnaDemo/Base.lproj/Main.storyboard
+++ b/QnaDemo/Base.lproj/Main.storyboard
@@ -126,8 +126,7 @@
                                 <rect key="frame" x="247" y="710" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="LzV-eY-vtt"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="120" id="Nhc-HC-xU8"/>
-                                    <constraint firstAttribute="width" constant="120" id="iX0-vR-e18"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="iX0-vR-e18"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Show Answer" backgroundImage="darthvader_2">
@@ -147,10 +146,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfl-KY-r2V">
-                                <rect key="frame" x="41" y="710" width="120" height="120"/>
+                                <rect key="frame" x="41" y="710" width="120.00000000000011" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="71h-CC-hsN"/>
-                                    <constraint firstAttribute="height" constant="120" id="Tu3-xM-njt"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="71h-CC-hsN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Next Question" backgroundImage="stormtrooper_2">
